[package]
name = "tx_toy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.1" }
rust_decimal = { version = "1.23", features = ["serde-with-str"] }
rust_decimal_macros = "1.23"
thiserror = "1.0"
clap = { version = "3.1", features = ["cargo"] }
anyhow = "1.0"
